# rays

./: .gitmodules  CMakeLists.txt
src/: main.cpp
